Remove unfollowing section from digest, minor style adjastments.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -55,32 +55,22 @@ h2 {
   text-align: center;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 a.post-block-link {
   display: inline;
-}
-
-div.digest-post-row {
-  display: flex;
-  height: 56px;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-div.digest-post-row > a {
-  display: contents;
 }
 
 p.digest-post-footer-row {
   width: 100%;
   max-width: 508px;
   height: 24px;
-  flex: 0 0 auto;
   text-align: left;
   color: rgb(52, 65, 79, 0.5);
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
-  align-self: center;
   vertical-align: middle;
 }
 
@@ -96,7 +86,6 @@ p.digest-post-footer-row span.comments-label, p.digest-post-footer-row span.new-
 }
 
 div.digest-post-headline-row {
-  flex: 0 0 auto;
   display: flex;
   width: 100%;
   max-width: 508px;
@@ -113,7 +102,6 @@ div.digest-post-headline-row.has-comments {
 }
 
 div.digest-post-headline-row span.digest-post-arrow {
-  flex: 0 0 auto;
   margin: 0 6px;
   text-align: center;
   color: #34414f;
@@ -141,7 +129,7 @@ div.digest-post-headline-row span.digest-post-attribution {
   white-space: nowrap;
 }
 
-div.digest-post-headline-row span.digest-post-title {
+div.digest-post-headline-row span.digest-post-title a {
   flex: 0 1 auto;
   margin-right: auto;
   overflow: hidden;
