--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -1017,39 +1017,39 @@ img.notify-author-avatar {
 
 a.label-link, a.label-link:hover, a.label-link:visited, a.label-link:active, a.label-link:focus {
   text-decoration: none;
+  display: inline-block!important;
+  padding: 0;
+  height: 16px;
+  margin: 0;
+  font-size: 12px;
 }
 
-div.oc-label {
-  width: auto;
+span.oc-label {
+  display: inline-block!important;
   padding: 0 2px;
   height: 16px;
-  position: relative;
-  margin-right: 4px;
-  display: inline-block;
-}
-
-div.oc-label span.oc-label-bg {
-  opacity: 0.16;
   border-radius: 2px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-div.oc-label span.oc-label-name {
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.5px;
-  display: block;
-  z-index: 2;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 150px;
+}
+
+div.oc-labels {
+  display: flex;
+  flex-flow: row wrap;
+  min-height: 16px;
+  width: 100%;
+}
+
+div.oc-labels a.label-link {
+  margin-right: 4px;
+  flex: 0 0 auto;
+  margin-bottom: 4px;
 }
 
 /*
