--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -145,37 +145,30 @@ label.digest-label {
 }
 
 table.digest-cta-table {
-  display: inline;
   text-align: center;
-  margin: 0 auto;
-}
-
-th.digest-cta {
-  border-radius: 4px;
-  background-color: #6833F1;
-  vertical-align: middle;
   height: 32px;
-  font-size: 32px;
   line-height: 32px;
-  text-align: center;
+  background-color: transparent;
 }
 
-a.digest-cta-link {
+a.digest-cta {
   text-decoration: none;
+  height: 32px;
+  font-size: 18px;
+  line-height: 32px;
 }
 
-a.digest-cta-link div.digest.cta-inner {
-  margin-top: 0;
-  margin-bottom: 0;
+a.digest-cta div.digest.cta-inner {
+  margin: 0 auto;
   font-weight: bold;
-  width: auto;
+  width: 146px;
   display: block;
   height: 32px;
   font-size: 18px;
   line-height: 32px;
   text-align: center;
-  padding: 0 16px 8px;
   color: white;
+  border-radius: 4px;
 }
 
 a.digest-cta:hover {
