Make sure emails are using carrot green as default primary color.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -1,3 +1,7 @@
+:root {
+  --default-primary-color: #21B268;
+}
+
 body,
 html,
 .body,
@@ -50,7 +54,7 @@ h2 {
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 16px;
   font-weight: bold;
-  color: #6833F1;
+  color: var(--default-primary-color);
   margin: 0px;
   text-align: center;
 }
@@ -75,7 +79,7 @@ p.digest-post-footer-row {
 }
 
 p.digest-post-footer-row span.comments-label {
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
   line-height: 24px;
@@ -157,7 +161,7 @@ a.digest-cta:hover {
 }
 
 label.digest-label a {
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-family: Helvetica, Arial, sans-serif !important;
   line-height: 20px;
   font-size: 16px;
@@ -200,7 +204,7 @@ p.attribution {
 }
 
 p.attribution label.new-comments {
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
   font-weight: bold;
@@ -224,7 +228,7 @@ table.cta-button span.button-text {
 }
 
 table.post-button span.button-text {
-  color: #6833F1;
+  color: var(--default-primary-color);
 }
 
 table.footer p {
@@ -234,7 +238,7 @@ table.footer p {
 
 table.footer a {
   font-weight: bold;
-  color: #6833F1;
+  color: var(--default-primary-color);
 }
 
 .header-table {
@@ -285,7 +289,7 @@ div.digest-date {
   font-size: 14px;
   font-weight: bold;
   color: white;
-  background-color: #52C489;
+  background-color: var(--default-primary-color);
   border-radius: 6px;
   text-align: center;
   padding: 11px 0px 11px 0px;
@@ -398,9 +402,8 @@ p.header-paragraph {
 }
 
 p.header-paragraph a {
-  color: lightgreen;
   font-size: 14px;
-  color: #6833F1;
+  color: var(--default-primary-color);
   text-decoration: underline;
 }
 
@@ -503,7 +506,7 @@ p.digest-help {
 }
 
 p.digest-help a{
-  color: #6833F1;
+  color: var(--default-primary-color);
   text-decoration: underline;
 }
 
@@ -529,7 +532,7 @@ img.read-post-image {
 span.read-post-text {
   float: left;
   margin-left: 8px;
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-size: 14px;
 }
 
@@ -575,7 +578,7 @@ img.green-button {
 p.notification-link a {
   font-size: 14px;
   font-weight: bold;
-  color: #6833F1;
+  color: var(--default-primary-color);
 }
 
 span.notification-content, span.notification-content p, span.notification-content div {
@@ -632,7 +635,7 @@ span.oc-mention {
 a.learn-more {
   float: left;
   margin-left: 16px;
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-size: 14px;
   font-weight: bold;
   margin-top: 10px;
@@ -708,7 +711,7 @@ p.digest-post-date {
 }
 
 .token-link {
-  color: #6833F1;
+  color: var(--default-primary-color);
   font-size: 16px;
   text-align: center;
   cursor: pointer;
@@ -727,7 +730,7 @@ p.digest-post-date {
   color: white;
   width: auto;
   max-width: 210px;
-  background-color: #52C489;
+  background-color: var(--default-primary-color);
   border-radius: 6px;
   text-align: center;
   padding: 11px 16px;
@@ -755,7 +758,7 @@ a.green-button.integration-settings-button {
   font-weight: bold;
   color: white !important;
   width: 200px;
-  background-color: #6833F1;
+  background-color: var(--default-primary-color);
   border-radius: 6px;
   text-align: center;
   padding: 11px 0px;
@@ -965,11 +968,11 @@ div.post-body, div.post-body p, div.post-body pre {
 }
 
 a {
-  color: #6833F1;
+  color: var(--default-primary-color);
 }
 
 a:hover {
-  color: #6833F1;
+  color: var(--default-primary-color);
   text-decoration: underline;
 }
 
@@ -998,7 +1001,7 @@ table.body .column .columns {
   font-family: Helvetica, Arial, sans-serif !important;
   font-size: 12px;
   font-weight: bold;
-  color: #6833F1;
+  color: var(--default-primary-color);
 }
 
 h1.token-headeer {
